[project]
name = "pytram"
version = "0.1.0"
description = "Saga orchestration framework inspired by Eventuate Tram"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aio-pika>=9.5.5",
    "aiosqlite>=0.21.0",
    "pyfaulttolerance>=0.1.2",
    "sqlmodel>=0.0.24"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytram*"]
