[project]
name = "pytram"
version = "0.1.4"
description = "Saga orchestration framework inspired by Eventuate Tram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiosqlite>=0.21.0",
    "pyfaulttolerance==0.1.3",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytram*"]
